--- a/Views/lunch.html
+++ b/Views/lunch.html
@@ -128,61 +128,171 @@ recipes.html
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <img src="../images/couschickfencit.jpeg" id="smallrecipepagepics">
-          Couscous With Chickpeas, Fennel, and Citrus
+            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <img src="../images/couschickfencit.jpeg" id="smallrecipepagepics">
+              Couscous With Chickpeas, Fennel, and Citrus
+            </a>
+          </h4>
+        </div>
+      <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+        <p><br>- 1 large fennel bulb with fronds<br>
+          - 3 tablespoons olive oil, divided<br>
+          - 1/2 teaspoon ground coriander<br>
+          - 1 1/2 cups (or 1 15-ounce can) cooked and drained chickpeas<br> 
+          - 10 Kalamata olives, halved and pitted<br>
+          - Zest and juice of 1/2 lemon<br>
+          - Zest and juice of 1 orange<br>
+          - 1/2 teaspoon salt<br>
+          - 1 cup instant couscous<br>
+          <br>
+          Trim fennel and cut into 1/4-inch thick wedges. Reserve fronds for garnish.<br>
+          <br>
+          Heat 2 tablespoons olive oil in a large skillet over medium heat. Add fennel and cook, stirring occasionally, until tender and caramelized, about 10-15 minutes. Add coriander, chickpeas, olives, and lemon juice to pan and stir to combine. Continue to cook over medium heat, stirring occasionally.<br>
+          <br>
+          Meanwhile, juice the orange into a liquid measuring cup and top off with water to make 1 1/2 cups of liquid. Add liquid to a small saucepan along with 1 tablespoon olive oil, orange zest, lemon zest, and salt. Bring to a boil and stir in couscous. Cover, remove from heat, and let stand for at least 5 minutes.<br>
+          <br>
+          To serve, fluff couscous grains with a fork and spread on a dish. Spoon chickpeas and fennel over couscous and garnish with fennel fronds.<br>
+        </p>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingTwo">
+        <h4 class="panel-title">
+          <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <img src="../images/spicylentilwrap.jpg" id="smallrecipepagepics">
+            Spicy Lentil Wraps with Tahini Sauce
           </a>
-      </h4>
-    </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-<p>- 1 large fennel bulb with fronds<br>
-- 3 tablespoons olive oil, divided<br>
-- 1/2 teaspoon ground coriander<br>
-- 1 1/2 cups (or 1 15-ounce can) cooked and drained chickpeas<br> 
-- 10 Kalamata olives, halved and pitted<br>
-- Zest and juice of 1/2 lemon<br>
-- Zest and juice of 1 orange<br>
-- 1/2 teaspoon salt<br>
-- 1 cup instant couscous<br>
-
-Trim fennel and cut into 1/4-inch thick wedges. Reserve fronds for garnish.
-
-Heat 2 tablespoons olive oil in a large skillet over medium heat. Add fennel and cook, stirring occasionally, until tender and caramelized, about 10-15 minutes. Add coriander, chickpeas, olives, and lemon juice to pan and stir to combine. Continue to cook over medium heat, stirring occasionally.
-
-Meanwhile, juice the orange into a liquid measuring cup and top off with water to make 1 1/2 cups of liquid. Add liquid to a small saucepan along with 1 tablespoon olive oil, orange zest, lemon zest, and salt. Bring to a boil and stir in couscous. Cover, remove from heat, and let stand for at least 5 minutes.
-
-To serve, fluff couscous grains with a fork and spread on a dish. Spoon chickpeas and fennel over couscous and garnish with fennel fronds.
-    </p>
+        </h4>
+      </div>
+      <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <p><br>For the Red Pepper Paste (makes about 3/4 cup):<br>
+        - 6 medium red bell peppers, cored and chopped<br>
+        - 1/2 teaspoon cayenne pepper<br>
+        - 1 teaspoon kosher salt<br> 
+        - Olive oil to cover (if refrigerating)<br>
+        <br>
+        For the lentil filling:<br>
+        - 1/2 cup red lentils, rinsed<br>
+        - 3/4 cups fine grain (#1) bulgur<br>
+        - 2 tablespoons olive oil<br>
+        - 1 medium onion, finely chopped<br>
+        - 2 teaspoons ground cumin<br>
+        - 1 teaspoon red pepper flakes<br>
+        - 1 scallion, chopped<br>
+        - 2 tablespoons chopped flat-leaf parsley<br>
+        - 1/2 teaspoon kosher salt<br>
+        <br>
+        For the tahini dipping sauce (makes 3/4 cup):<br>
+        - 1/4 cup tahini<br>
+        - 2 teaspoons lemon juice<br>
+        - 2 teaspoons finely chopped parsley<br>
+        - 1/4 teaspoon crushed garlic<br>
+        - 1/8 teaspoon red pepper flakes<br>
+        - 1/8 teaspoon kosher salt<br>
+        <br>
+        To assemble the wraps:<br>
+        - 6 (approximately 9x12-inch) sheets lavash, white or whole wheat<br>
+        - 2 cups shredded cabbage<br>
+        <br>
+        To make the red pepper paste: Combine bell peppers, cayenne pepper, and salt in a food processor and puree. Pour the puree into a skillet over low heat and simmer, stirring occasionally, until reduced to a paste. This can take up to 2 hours. Let cool before using. To store, pack the paste into a jar, pour enough olive oil on top to cover, and refrigerate.<br>
+        <br>
+        To make the lentil filling: Combine lentils and 2 cups of water in a small saucepan over medium heat. Bring to a boil, cover, and reduce heat to low. Simmer until lentils are soft, about 20 minutes. Turn off heat and stir in bulgur. Let stand until water is absorbed and bulgur is soft, about 30 minutes.<br>
+        <br>
+        Meanwhile, heat olive oil in a pan over medium heat. Add onions and cook, stirring frequently, until soft and translucent. Stir in cumin and red pepper flakes and cook for another minute.<br>
+        <br>
+        Add onions, scallions, parsley, and salt to lentil-bulgur mixture and stir until well combined. Let cool before using to make wraps. (If you want a smoother texture closer to the Trader Joe's version, you can run the filling through a food processor, but I like it just as it is.) You can freeze the filling in an airtight container if not using all at once.<br>
+        <br>
+        To make the tahini dipping sauce: Place all ingredients in a small bowl with 2/3 cup of warm water, and mix with a fork until well combined. Gradually stir in small amounts of additional warm water until the desired consistency is achieved.<br>
+        <br>
+        To assemble the wraps: Lay out a lavash sheet with the shorter end closest to you. Spread 1 1/2 tablespoons of red pepper paste across the lower 1/3 of the sheet. Top with the lentil-bulgur mixture, and then the cabbage. Roll from the bottom up, and spread an additional 1/2 tablespoon of red pepper paste across the top end to help seal the wrap. Repeat for remaining wraps.<br>
+        <br>
+        To serve, cut each wrap in half and serve with tahini sauce on the side.<br>
+        <br>
+        Recipe Notes<br>
+        You can substitute store-bought red pepper paste or mild harissa for the homemade version in this recipe.<br></p>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-    </div>
-  </div>
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Collapsible Group Item #3
+          <img src="../images/kalequinoasalad.jpg" id="smallrecipepagepics">
+          Kale & Quinoa Salad with Dates, Almonds & Citrus Dressing
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      <p><br>For the salad and toppings:<br>
+        - 1 tablespoon olive oil<br>
+        - 1 large onion, diced<br>
+        - Salt<br>
+        - 1/2 cup red quinoa<br>
+        - 1 small clove garlic, smashed<br>
+        - 1 bunch lacinato kale (3/4 to 1 pound, with stems)<br> 
+        - 1/2 heaping cup whole dates<br>
+        - 1/2 cup roasted salted whole almonds<br>
+        <br>
+        For the dressing: <br>
+        - 1 clementine or mandarin orange, juiced<br>
+        - 1/2 lime, juiced<br>
+        - 2 teaspoons maple syrup<br>
+        - 1/4 cup extra-virgin olive oil<br>
+        - Salt and freshly ground black pepper<br>
+        <br>
+        Heat the olive oil in a wide sauté pan over medium heat. Add the onion and sprinkle lightly with salt. Cook, stirring occasionally, until the onion has darkened to a toasty brown and smells caramelized — about 20 minutes. Remove from the heat and set aside. You should have about 1/2 cup of cooked onions. (This can be done up to 3 days ahead of time, and the onions can be refrigerated.)<br>
+        <br>
+        Rinse the quinoa in a fine mesh strainer. Add it and the garlic to a 2-quart saucepan set over medium-high heat and sauté for about a minute both to dry the grain and toast it lightly. Add 1 cup water and 1/2 teaspoon salt and bring to a boil. Cover and turn the heat to low; cook for 15 minutes. Turn off the heat but leave the lid on for an additional 5 minutes. After 5 minutes, remove the lid and fluff with a fork.<br>
+        <br>
+        While the onions are caramelizing and the quinoa is cooking, slice off the muddy bottoms of the kale stems, then slice the rest of the bunch into fine ribbons. Wash thoroughly and spread on a towel to dry.<br>
+        <br>
+        Pit the dates and slice them into quarters. Roughly chop the almonds, by which I mean try to chop each almond into just two or three pieces, no more.<br>
+        <br>
+        Make the dressing: Whisk the juices together (you should have about 1/4 cup total of juice, or a little less). Whisk in the maple syrup and olive oil. The dressing will be emulsified but still thin. Stir about 2 tablespoons of the dressing into the quinoa after it finishes cooking.<br>
+        <br>
+        Assemble the salad: Toss the kale with all of the still-warm quinoa and the caramelized onions. Toss with about half the dressing and taste. Add the remaining dressing if desired, then toss with the dates and almonds. Taste a bite; if it needs more salt, add it now, as well as fresh pepper if desired.<br>
+        <br>
+        This salad keeps very well; the kale gets more tender as it sits in the dressing. Refrigerate for up to 5 days.<br></p>
+      </div>
     </div>
   </div>
-</div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <img src="../images/curriedtofusalad.jpg" id="smallrecipepagepics">
+          Curried Tofu Salad
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+      <p><br>- 1/3 cup golden raisins<br>
+        - 1 teaspoon yellow mustard seeds<br>
+        - 1/4 cup apple cider vinegar<br>
+        - 1 pound extra firm tofu<br>
+        - 2 tablespoons roasted pumpkin seeds<br> 
+        - 1 scallion, chopped<br>
+        - 1 tablespoon chopped parsley<br>
+        - 1/2 cup vegan mayonnaise (homemade or store-bought)<br> 
+        - 2 tablespoons curry powder<br>
+        - 3/4 teaspoon kosher salt<br> 
+        - Freshly ground black pepper<br>
+        <br>
+        Place the raisins and mustard seeds in a small heatproof bowl. Bring the apple cider vinegar to a boil and pour it over the raisins and mustard seeds. Let them soak for at least 10 minutes (longer is even better).<br>
+        <br>
+        Rinse and drain the tofu and gently press it between towels to rid of excess water. Place the tofu in a large bowl and roughly crumble it using your hands or a fork. Add the raisins and mustard seeds (along with any excess vinegar), pumpkin seeds, scallions, and parsley.<br>
+        <br>
+        In a separate bowl, stir together the mayonnaise, curry powder, salt, and pepper to taste. Add this to the tofu mixture and stir until thoroughly combined. Taste and adjust seasonings if desired.<br>
+        <br>
+        Serve as a sandwich spread or on a bed of salad greens. To store, refrigerate in an airtight container for up to 3 days.<br></p>
+      </div>
+    </div>
+  </div>
     
 
-  </div>
+</div>
 
 
 	<!-- FOOTER -->
