--- a/Views/dashboard.html
+++ b/Views/dashboard.html
@@ -78,8 +78,8 @@ recipes.html
                 <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
@@ -88,11 +88,10 @@ recipes.html
   <div class="container" id="toprow">
     <div id="dashwelc" class="container">              
       <h3>WELCOME USERNAME!</h3>
-      <img src="images/veg_week.jpg">
-      <a href="updatephoto.html">update photo</a>
-      <a href="messages.html">messages</a>
-      <a href="myrecipes.html">My Recipes</a>
-      <a href="settings.html">Settings</a>
+      <img src="../images/veg_week.jpg"><br>
+      <a href="updatephoto.html">Update Photo</a><br>
+      <a href="messages.html">Messages</a><br>
+      <a href="myfriends.html">Friends</a><br>
     </div>
 
 
