--- a/Views/lunch.html
+++ b/Views/lunch.html
@@ -78,36 +78,80 @@ recipes.html
                 <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
 
-	<!--VEGAN OF THE WEEK -->
+  <!--REC OF THE WEEK -->
   <div class="container" id="toprow">
-    <div id="vegweek" class="container">              
-      <h3>VEGAN OF THE WEEK</h3>
-      <img src="images/veg_week.jpg">
-      <h2>ALLISON MCKENNA</h2>
-      <p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. Allison
-        has rescued over 50 pets in her home town from busy city streets, abusive homes, etc. She devotes her life to being
-        an advocate for animals and loves every second of it. She claims her love of animals ultimately lead her to starting
-        a vegan lifestyle. "It just made sense" Allison says.</p>
+    <div id="featrec" class="container">              
+      <h3>FEATURED RECIPE</h3>
+      <img src="../images/cauli.jpg">
+      <h2>Roasted Cauliflower Bites with Nacho Cheese</h2>
+      <p><strong>Cauliflower</strong><br>
+        - 1 head cauliflower<br>
+        - 1 teaspoon mild chili powder<br>
+        - 1/2 teaspoon salt (optional or to taste)<br>
+        - 1/2 teaspoon ground cumin<br>
+        - 1/2 teaspoon smoked paprika<br>
+        - 1/2 teaspoon garlic powder<br>
+        - 1/4 teaspoon chipotle chile powder (optional)<br><br>
+        Preheat oven to 400F. Line a baking sheet with parchment paper or silicone baking mat.<br><br>
+        Cut the cauliflower into individual bite-sized florets. Try to keep them about the same size. Rinse them in a colander under running water. Shake off excess water but don’t dry. Spread them out on the baking sheet.<br><br>
+        Combine all seasonings in a small bowl. Sprinkle over the cauliflower, turning the florets so that all sides are seasoned. Bake in preheated oven for 15 minutes; turn florets and bake another 15 minutes or until they are beginning to brown in spots. Remove and serve warm with nacho cheese or other dipping sauce.<br>
+        <br><strong>Cheese Sauce</strong><br>
+        - 1 cup plain, sugar-free non-dairy milk<br>
+        - 1/4 cup nutritional yeast<br>
+        - 1/4 cup mashed sweet potato<br>
+        - 2 tablespoons potato starch or cornstarch<br>
+        - 1 tablespoon lemon juice<br>
+        - 1/2 -3/4 teaspoon salt (optional or to taste)<br>
+        - 1/2 teaspoon dry mustard<br>
+        - 1/8 teaspoon garlic powder<br>
+        - 1/8 teaspoon onion powder<br>
+        - 1/8 teaspoon ground cumin<br>
+        - 1 10-ounce can Rotel Diced Tomatoes and Chilies, drained and liquid reserved
+        chipotle powder, to taste<br><br>
+        Put all ingredients except Rotel tomatoes and chipotle into the blender. Blend at high speed until smooth. Pour into a saucepan and cook, stirring constantly, over medium-high heat until boiling. Reduce heat to low and continue cooking and stirring until mixture becomes very thick. Stir in the drained tomatoes. If sauce is too thick, add a tablespoon or so of the reserved tomato liquid. Check seasoning, and add chipotle powder to taste if you’d like it spicier.<br><br>
+        Serve warm with Roasted Cauliflower Bites, tortilla chips, or crackers or atop burritos and tacos.<br>
+
+    </p>
     </div>
 
-  <!-- SLIDER -->
-    <div class="container" id="slider">
-  <!--    <ul class="bxslider" >
-        <li> --><img id="caropic" src="images/caro_01.jpg"> <!-- </li>
-          <li><img id="caropic" src="images/caro_02.jpg"></li>
-          <li><img id="caropic" src="images/caro_03.jpg"></li>
-          <li><img id="caropic" src="images/caro_04.jpg"></li>
-      
-      </ul> -->
+  <div class="container" id="toprow">
+    <div id="vidrec" class="container">              
+      <h3>VIDEO RECIPE</h3>
+      <iframe id="vidrecvid" src="https://www.youtube.com/embed/bUABKdpdmt4" frameborder="0" allowfullscreen></iframe>
+      <h2>Make Vegan Bacon Using Rice Paper | The Edgy Veg</h2>
+      <p><strong>Ingredients</strong><br>
+        - 8-10 pieces rice paper<br>
+        - 2 Tbsp olive oil<br>
+        - 2 Tbsp nutritional yeast<br>
+        - 3 Tbsptamari (or soy sauce if you don't have tamari)<br>
+        - ½ Tbsp garlic powder<br>
+        - ¼ tsp liquid smoke (you can also sub 1 Tbsp bbq sauce if you do not have access to liquid smoke)<br>
+        - ½ Tbsp maple syrup<br>
+        - ¼ tsp ground black pepper<br>
+        - ¼ tsp of Hungarian paprika<br><br>
+      <strong>Instructions</strong><br>
+        Cut rice paper into thick strips,by laying two sheets on top of one another. Use a large, very sharp knife to cut the sheets into strips by placing the blade onto the paper and pressing firmly. The rice paper will crack a bit- but using a very sharp knife should eliminate major breakage.<br><br>
+        Preheat the oven to 400F.<br><br>
+        Prepare 2 baking sheets with sheets of parchment paper.<br><br>
+        In a bowl, whisk together all the ingredients except the rice paper. This will become your marinade.<br><br>
+        Prepare a second wide bowl filled partway with water.<br><br>
+        Take two strips with similar length and shape and lay them side by side. Using a pastry brush, brush each sheet with water and stack them one on top of the other. They should start to stick together.<br><br>
+        Brush water along the side facing you and, holding them together, flip the paper over and brush that side with water.<br><br>
+        Lay on a piece of parchment or a cutting board and do this with as many pieces as you can until you run out of space.<br><br>
+        Once you've run our of space or rice paper- whichever comes first- using dry pastry brush (do not using the one you used for water- it will dilute the marinade) and brush the marinade onto one side of the now fused rice paper strip, and lay marinade side down onto the baking pan.<br><br>
+        Now brush the marinade onto the strip facing you,coat generously. Both side should now have marinade on them.<br><br>
+        Repeat technique with remaining rice paper strips until the baking sheet is filled, whisking the marinade every so often to prevent separation.<br><br>
+        Bake for about 7 to 8 minutes, until crisp.<br><br>
+        The strips burn easily, so keep an eye on the baking sheet and remove from sheet right away.<br><br>
+        You can store leftover rice paper bacon in an airtight container at room temperature for up to 3 days, or in the fridge for a few weeks.<br><br><br>
+    </p>
     </div>
-  </div>
-
   
 
   <!-- RECIPES -->
@@ -259,7 +303,7 @@ recipes.html
   </div>
 
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingFour">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
           <img src="../images/curriedtofusalad.jpg" id="smallrecipepagepics">
