--- a/Views/saved.html
+++ b/Views/saved.html
@@ -69,30 +69,29 @@ recipes.html
   				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
           		<ul class="dropdown-menu">
-                <li><a href="breakfast.html">Breakfast</a></li>
-                <li><a href="lunch.html">Lunch</a></li>
-                <li><a href="dinner.html">Dinner</a></li>
-                <li><a href="dessert.html">Dessert</a></li>
-                <li><a href="snacks.html">Snacks</a></li>
-                <li><a href="appetizers.html">Appetizers</a></li>
-                <li><a href="drinks.html">Drinks</a></li>
+            		<li><a href="recipes.html">Breakfast</a></li>
+            		<li><a href="#">Lunch</a></li>
+            		<li><a href="#">Dinner</a></li>
+            		<li><a href="#">Dessert</a></li>
+            		<li><a href="#">Snacks</a></li>
+            		<li><a href="#">Appetizers</a></li>
+            		<li><a href="#">Drinks</a></li>
           		</ul>
-  			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
-  		</ul>
-	</nav>
+        </li>
+        <li><a href="users.html">Users</a></li>
+      <!--  <li><a href="#">Chatrooms</a></li> -->
+      </ul>
+  </nav>
 
 
-	<!--VEGAN OF THE WEEK -->
+  <!--welcome -->
   <div class="container" id="toprow">
     <div id="dashwelc" class="container">              
       <h3>WELCOME USERNAME!</h3>
-      <img src="images/veg_week.jpg">
-      <a href="updatephoto.html">update photo</a>
-      <a href="messages.html">messages</a>
-      <a href="myrecipes.html">My Recipes</a>
-      <a href="settings.html">Settings</a>
+      <img src="../images/veg_week.jpg"><br>
+      <a href="updatephoto.html">Update photo</a><br>
+      <a href="messages.html">Messages</a><br>
+      <a href="myfriends.html">My Friends</a><br>
     </div>
 
 
@@ -107,16 +106,17 @@ recipes.html
       <a href="deleted.html">Deleted</a><br>
     </div>
 
+     <a name="dash">
     <div id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          THREE BEAN CHILI
+          Mike Russo | 6/22/16 | 1:27pm
           </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
     </div>
   </div>
@@ -124,7 +124,7 @@ recipes.html
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
+          Mary Stevens | 6/21/16 | 12:03pm
         </a>
       </h4>
     </div>
@@ -136,7 +136,7 @@ recipes.html
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Collapsible Group Item #3
+          Philip Wilson | 6/21/16 | 9:31am
         </a>
       </h4>
     </div>
