--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header li a:hover { background-color: none; }
 #vegweek, #slider, #dashwelc, #featrec, #vidrec { background: rgba(17,244,216, .2); width: 27%; height: 30em; padding: 0; float: left; 
 	margin: -.5% 1.8% .5em 0; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
-#vegweek img, #featrec img { max-width: 190px; max-height: 190px; padding-left: 10px; }
+#vegweek img, #featrec img, #dashwelc img { max-width: 190px; max-height: 190px; padding-left: 10px; }
 #vegweek h2 { margin: 3% 0 1% 0; }
 #vegweek h3, #about h3, #dashwelc h3, #featrec h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 #vegweek p { font-size: 12pt; }
@@ -53,9 +53,12 @@ header li a:hover { background-color: none; }
 #videoweektext p { padding: 5px;}
 
 /* pic carousel */
-#slider, #vidrec { float: left; clear: none; margin-left: -.7%; width: 55%; height: 30em;}
+.carousel-inner, #vidrec { float: left; clear: none; margin-left: -.7%; width: 55%; height: 30em;}
+.carousel-caption { background: rgba(138,211,127, 0.6); }
 #caropic { width: 100%; height: 100%; margin-left: -.8%;}
-#slider li { list-style-type: none; }
+.carousel-inner li { list-style-type: none; }
+#leftcontrol { position: absolute; top: 25em; left: 32em;}
+#rightcontrol { position: absolute; top: 25em; left: 55em; }
 
 /*recipes*/
 #indexrecipe h3, #about h3, #privacy h3, #login h3, #recrecipe h3, #dashboard h3, #vidrec h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
@@ -115,9 +118,13 @@ header li a:hover { background-color: none; }
 #featrec img { margin-left: 4em; }
 #featrec h2, #featrec p, #vidrec p { margin: 1em;}
 #vidrec { background-color: rgba(33,211,6, .2); width: 69%; text-align: left; overflow: scroll; }
-#vidrecvid { float: left; clear: none; height: 18em; width: 22em; margin-right: 1em; }
+#vidrecvid { float: left; clear: none; height: 18em; width: 22em; padding: 1em; }
+#headingFour img { margin-left: .8em; }
 
 /* dashboard */
 #dashwelc { float: left; clear: none; width: 20%; height: 30em; }
 #dashboard { width: 70%; float: left; clear: none; margin-top: -.3em;}
 #dashboard #accordion { width: 80%; float: left; clear: none; }
+
+/*userpage*/
+#privacy table tr:nth-child(even) { background-color: rgba(33,211,6, .3); }
