--- a/Views/appitizers.html
+++ b/Views/appitizers.html
@@ -78,13 +78,13 @@ recipes.html
                 <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
 
-	<!--VEGAN OF THE WEEK -->
+	<!--REC OF THE WEEK -->
   <div class="container" id="toprow">
     <div id="featrec" class="container">              
       <h3>FEATURED RECIPE</h3>
