--- a/Views/useragree.html
+++ b/Views/useragree.html
@@ -87,8 +87,8 @@ $(document).ready(function(){
                 <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
