all front end done
all front end done

--- a/Views/saved.html
+++ b/Views/saved.html
@@ -112,12 +112,16 @@ recipes.html
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Mike Russo | 6/22/16 | 1:27pm
+                Mike Russo | 6/22/16 | 1:27pm | Roomate
           </a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      Hey there! My roommate and I are looking for another housemate. We live in a large apartment in Upper Darby. There are two bedrooms and a spacious living area. The rent is $250 a month, which includes cable, internet, electric, and water. 
+
+My roommate and I are both vegans and will only live with another vegan. IF YOU AREN'T A VEGAN, YOU NEED NOT APPLY. We are looking for someone who will help with the cooking, in addition to the rent. 
+
+If you are a vegan and want to live with two vegans who respect your personal space, please e-mail us. Include some information about yourself, including your source of income.
     </div>
   </div>
   <div class="panel panel-default">
@@ -129,19 +133,60 @@ recipes.html
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            dogs can eat a vegetarian diet and thrive. While this topic is certainly interesting to vegetarians, owners who don't have issues feeding their dogs meat should also pay attention. Here's why: It is true that dogs belong to the order Carnivora, but they are actually omnivores
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Philip Wilson | 6/21/16 | 9:31am
+          Philip Wilson | 6/21/16 | 9:31am | Fwd: You Know You're Vegan when...
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      1. You have grown weary of the constant vegan jokes.
+wifflegif.com
+2. “What if you get trapped on a desert island.”
+"What if you get trapped on a desert island."
+imgur.com
+3. “Plants have feelings too but you still eat those.”
+giphy.com
+4. “Do you mind if I eat meat in front of you?”
+gif-central.blogspot.com
+5. Everyone around you is an expert on nutrition.
+blogger.com
+6. “Where do you get your protein fr…”
+"Where do you get your protein fr..."
+imgur.com
+7. People are constantly asking why you went vegan.
+ 27 Things You Know When You&#39;re The Only Vegan In The Village
+adorable-gifs.tumblr.com
+8. And when you explain they get mad at your for “preaching”.
+goodreads.com
+9. You have your own pans, plates, and cutlery to avoid any possible meat residue left by your parents/roommate.
+You have your own pans, plates, and cutlery to avoid any possible meat residue left by your parents/roommate.
+testkitchentuesday.com
+10. Strangers tell you about the time they went vegetarian for a couple of weeks.
+imgfave.com
+11. But that they gave it up because they “could NEVER stop eating bacon.”
+gifrific.com
+12. Everyone assumes you eat this.
+Everyone assumes you eat this.
+Nikolay Trubnikov / Thinkstock
+13. But your diet mostly consists of these…
+But your diet mostly consists of these...
+Stacey Newman / Thinkstock
+14. And definitely a lot of these…
+And definitely a lot of these...
+15. Your relationship with hummus is next-level.
+anarmyoflepers.tumblr.com
+16. You automatically refuse all hors d’oeuvres, buffet items, and birthday cakes.
+google.co.uk
+17. And you don’t even bother trying to attend BBQs.
+benedictcumberbatchruinedme.tumblr.com
+“You can use the grill once we’re done.”
+18. Your friends always want to meet at restaurants where you can only eat the side salad.
     </div>
   </div>
 </div>
