--- a/Views/login.html
+++ b/Views/login.html
@@ -87,8 +87,8 @@ $(document).ready(function(){
                 <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
@@ -117,7 +117,7 @@ $(document).ready(function(){
 		- Find new recipes<br>
 		- Share your favorite recipes<br>
 		- Learn about becoming vegan<br>
-		<a href="Views/signup.html">
+		<a href="signup.html">
 			<div class="btn-group btn-group-lg" id="regcta">
   				<button type="button" class="btn btn-primary">
   					Register Now!
