--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ header li a:hover { background-color: none; }
 /* pic carousel */
 .carousel-inner, #vidrec { float: left; clear: none; margin-left: -.7%; width: 55%; height: 30em;}
 .carousel-caption { background: rgba(138,211,127, 0.6); }
-#caropic { width: 100%; height: 100%; margin-left: -.8%;}
+.carousel-inner img { width: 100%; height: 100%; margin-left: -.8%;}
 .carousel-inner li { list-style-type: none; }
 #leftcontrol { position: absolute; top: 25em; left: 32em;}
 #rightcontrol { position: absolute; top: 25em; left: 55em; }
