--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ style.css
  6/2/16
 */
 
-<<<<<<< HEAD
 /************************************************************ MAIN PAGE ************************************************************/
 
 body { font-family: 'Roboto Condensed', sans-serif; font-size: 12pt; }
@@ -27,7 +26,7 @@ header li a:hover { background-color: none; }
 #divider { color: #fff; margin-top: .5em; font-size: 16pt;}
 #search { height: 60px; float: right; clear: none;  margin-top: .5em; }
 #search #searchbox { width: 200px; height: 34px; border-radius: 5px; border: none; margin-top: 1%; }
-#socmed { width: 7.3em; height: 6.5em; margin-bottom: .2em; margin-left: .3em;}
+#socmed { width: 7.3em; height: 6.5em; margin-bottom: .6em; margin-left: .3em;}
 
 /*subnav*/
 #subnav { border-radius: 0; background-color: rgba(126,211,5, .2); border: none; }
@@ -37,8 +36,8 @@ header li a:hover { background-color: none; }
 
 /* vegweek */
 #toprow { width: 100%; margin-left: 0; }
-#vegweek, #slider, #dashwelc, #featrec, #vidrec { background: rgba(17,244,216, .2); width: 27%; height: 30em; padding: 0; float: left; 
-	margin: -.5% 1.8% .5em 0; float: left; clear: none; text-align: center; }
+#vegweek, #slider, #dashwelc, #featrec, #vidrec { background: rgba(17,244,216, .2); width: 27%; height: 32.5em; padding: 0; float: left; 
+	margin: -.5% 1.8% 1em 0; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
 #vegweek img, #featrec img, #dashwelc img { max-width: 190px; max-height: 190px; padding-left: 10px; }
 #vegweek h2 { margin: 3% 0 1% 0; }
@@ -46,33 +45,34 @@ header li a:hover { background-color: none; }
 #vegweek p { font-size: 12pt; }
 
 /* weekly video */
-#videoweek { float: left; clear: left; width: 100%; margin-top: 1em;}
+#videoweek { float: left; clear: left; width: 100%; margin-top: -1em; margin-left: -1.3%;}
 #videocontent { float: left; clear: none; width: 37%; height: 17.888em; margin-right: .9%;  }
-#videoweektext { background: rgba(239,239,27, .2); width: 60%; height: auto; padding: 0; float: left; 
+#videoweektext { background: rgba(239,239,27, .2); width: 62%; height: 17.888em; padding: 0; float: right; 
 	clear: none; text-align: center; }
 #videoweektext h3 { background-color: #EFEF1B; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 #videoweektext p { padding: 5px;}
 
 /* pic carousel */
-.carousel-inner, #vidrec { float: left; clear: none; margin-left: -.7%; width: 55%; height: 30em;}
+.carousel-inner, #vidrec { float: left; clear: none; margin-left: -.7%; width: 55%; height: 34em;}
 .carousel-caption { background: rgba(138,211,127, 0.6); }
 .carousel-inner img { width: 100%; height: 100%; margin-left: -.8%;}
 .carousel-inner li { list-style-type: none; }
 #leftcontrol { position: absolute; top: 25em; left: 32em;}
 #rightcontrol { position: absolute; top: 25em; left: 55em; }
+#caropic { width: 100%; height: 32em; }
 
 /*recipes*/
-#indexrecipe h3, #about h3, #privacy h3, #login h3, #recrecipe h3, #dashboard h3, #vidrec h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
-	text-align: center; font-size: 14pt; }
+#indexrecipe h3, #about h3, #privacy h3, #login h3, #recrecipe h3, #dashboard h3, #vidrec h3 { background-color: #21D306; 
+	display: block; width: 100%; margin: 0; padding: 3px 0; text-align: center; font-size: 14pt; }
 #indexrecipe, #about, #privacy { padding: 0; float: left; 
-	margin: 1% 3% 3% 1.5%; clear: none; text-align: center; width: 97%; }
+	margin: 1% 3% 3% 0; clear: none; text-align: center; width: 97%; }
 #indexrec1 img { margin: 6% 2% 0 2%; max-width: 90%; max-height: 17%; }
 #indexrec1 { width: 32%; height: auto; float: left; clear: none; background: rgba(33,211,6, .2); margin-top: 0; }
 #indexrec1 p { font-size: 9pt; text-align: left;}
 #indexreccta { float: right; clear: both; margin: 3% 0;}
 
 /*footer*/
-#footer { background-color: #11F4D8; text-align: center; float: left; clear: both; width: 100%; height: auto; }
+footer { background-color: #11F4D8; text-align: center; float: left; clear: both; width: 103.8%; height: auto; margin-left: -2em;}
 #footer ul { margin: 1% 0 1% 21%; }
 #footer h3 { margin-bottom: 2%; clear: both; }
 
@@ -94,7 +94,7 @@ header li a:hover { background-color: none; }
 #contactmap { margin: 2% 0 0 0; width: 100%; height: 30%; }
 
 /*signup*/
-#signup { margin: 2em 0 3em 23em; 
+#signup { margin: 2em 0 3em 23em; }
 
 
 /*login*/
@@ -131,14 +131,4 @@ header li a:hover { background-color: none; }
 /*userpage*/
 #privacy table tr:nth-child(even) { background-color: rgba(33,211,6, .3); }
 #privacy table tr:nth-child(even):hover { background-color: #fff; }
-=======
-body {
-	font-family: "Helvetica", sans-serif;
-}
 
-/* INDEX PAGE */
-#mainlogo {
-	max-height: 150px;
-	max-width: 400px;
-}
->>>>>>> master
